kubernetes/monitoring/grafana/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: monitoring
  name: redirectscheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
