kubernetes/monitoring/grafana/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-https
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-https
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - grafana.sudosuad.co.uk
    secretName: grafana-tls
  rules:
  - host: grafana.sudosuad.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
